--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -75,3 +75,9 @@ jobs:
         run: ls
       - name: Deploy
         run: echo "Deploying..."
+    report:
+      if: success()
+      runs-on: ubuntu-latest
+      steps:
+        - name: Report status
+          run: echo "Everything worked."
